--- a/amigos.html
+++ b/amigos.html
@@ -6,6 +6,60 @@
   <title>UnderSounds - Lista de Amigos</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    /* Ejemplo de estilos para la sección de amigos */
+    .friends-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
+      margin: 2rem 0;
+    }
+    .friend-card {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      overflow: hidden;
+      width: 250px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-align: center;
+      padding: 1rem;
+    }
+    .friend-card:hover {
+      transform: scale(1.03);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
+    .friend-avatar {
+      width: 44%;
+      height: 95px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+    .friend-info {
+      margin: 1rem 0;
+    }
+    .friend-name {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .friend-description {
+      font-size: 0.9rem;
+      color: #666;
+    }
+    .friend-link {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background-color: #0077cc;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    .friend-link:hover {
+      background-color: #005fa3;
+    }
+  </style>
 </head>
 <body>
   <!-- Inyección del header -->
@@ -15,7 +69,6 @@
       .then(response => response.text())
       .then(data => {
         document.getElementById('header-placeholder').innerHTML = data;
-        // Después de cargar el header, inicializamos el carrito
         setTimeout(() => {
           updateCartCount();
           updateCartDropdown();
@@ -23,69 +76,75 @@
       });
   </script>
 
-  <!-- Menú de pestañas: Recientes, Best Of's, Tienda, Amigos -->
+  <!-- Menú de pestañas -->
   <div class="tabs">
     <a href="index.html" class="tab">Recientes</a>
     <a href="index.html#bestofs" class="tab">Best Of's</a>
     <a href="tienda.html" class="tab">Tienda</a>
-    <a href="amigos.html" class="tab">Amigos</a> <!-- La pestaña de Amigos está activa -->
+    <a href="amigos.html" class="tab active">Amigos</a>
   </div>
 
-  <!-- Contenido principal: Lista de amigos (fans) -->
+  <!-- Contenido principal: Lista de amigos -->
   <main class="content">
     <h1>Lista de Amigos</h1>
-
-    <!-- Lista de amigos -->
-    <div class="friends-list">
-      <!-- Amigo 1 -->
-      <div class="friend-card">
-        <img src="images/fan1.jpg" alt="Amigo 1" class="friend-avatar">
-        <div class="friend-info">
-          <h2 class="friend-name">Amigo 1</h2>
-          <p class="friend-description">Descripción del amigo 1...</p>
-        </div>
-        <a href="amigoLista.html?id=1" class="friend-link">Ver perfil</a>
-      </div>
-
-      <!-- Amigo 2 -->
-      <div class="friend-card">
-        <img src="images/fan2.jpg" alt="Amigo 2" class="friend-avatar">
-        <div class="friend-info">
-          <h2 class="friend-name">Amigo 2</h2>
-          <p class="friend-description">Descripción del amigo 2...</p>
-        </div>
-        <a href="amigoLista.html?id=2" class="friend-link">Ver perfil</a>
-      </div>
-
-      <!-- Amigo 3 -->
-      <div class="friend-card">
-        <img src="images/fan3.jpg" alt="Amigo 3" class="friend-avatar">
-        <div class="friend-info">
-          <h2 class="friend-name">Amigo 3</h2>
-          <p class="friend-description">Descripción del amigo 3...</p>
-        </div>
-        <a href="amigoLista.html?id=3" class="friend-link">Ver perfil</a>
-      </div>
-
-      <!-- Amigo 4 -->
-      <div class="friend-card">
-        <img src="images/fan4.jpg" alt="Amigo 4" class="friend-avatar">
-        <div class="friend-info">
-          <h2 class="friend-name">Amigo 4</h2>
-          <p class="friend-description">Descripción del amigo 4...</p>
-        </div>
-        <a href="amigoLista.html?id=4" class="friend-link">Ver perfil</a>
-      </div>
+    <div class="friends-list" id="friends-list">
+      <!-- Los friend-cards se insertarán dinámicamente -->
     </div>
   </main>
 
   <!-- Botón de Ayuda Flotante -->
   <a href="ayuda.html" class="help-button" title="Ayuda">?</a>
 
-  <!-- Footer común -->
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
   </footer>
+
+  <script>
+    // Datos de ejemplo de amigos
+    const friends = [
+      {
+        id: 1,
+        name: "Amigo 1",
+        description: "Apasionado por el rock y pop, siempre buscando nuevos sonidos.",
+        avatar: "assets/images/amigo1.jpg"
+      },
+      {
+        id: 2,
+        name: "Amigo 2",
+        description: "Amante de la electrónica y el jazz, explorador de ritmos.",
+        avatar: "assets/images/amiga2.jpg"
+      },
+      {
+        id: 3,
+        name: "Amigo 3",
+        description: "Fanático de los clásicos y siempre actualizado en novedades.",
+        avatar: "assets/images/amiga4.jpg"
+      },
+      {
+        id: 4,
+        name: "Amigo 4",
+        description: "Seguidor de lo indie y alternativo, con gusto por lo experimental.",
+        avatar: "assets/images/amigo3.jpg"
+      }
+    ];
+
+    // Renderizar la lista de amigos dinámicamente
+    const friendsList = document.getElementById("friends-list");
+    friends.forEach(friend => {
+      const friendCard = document.createElement("div");
+      friendCard.classList.add("friend-card");
+      friendCard.innerHTML = `
+        <img src="${friend.avatar}" alt="${friend.name}" class="friend-avatar">
+        <div class="friend-info">
+          <h2 class="friend-name">${friend.name}</h2>
+          <p class="friend-description">${friend.description}</p>
+        </div>
+        <a href="amigoLista.html?id=${friend.id}" class="friend-link">Ver perfil</a>
+      `;
+      friendsList.appendChild(friendCard);
+    });
+  </script>
 
   <script src="js/main.js"></script>
   <script src="js/app.js"></script>
