--- a/cancion.html
+++ b/cancion.html
@@ -67,7 +67,7 @@
         album: "A Night at the Opera",
         genre: "Rock",
         duration: "5:55",
-        cover: "images/bohemian-rhapsody.jpg",
+        cover: "assets/images/bohemian.jpeg",
         lyrics: "Is this the real life? Is this just fantasy?..."
       },
       "2": {
@@ -76,7 +76,7 @@
         album: "After Hours",
         genre: "Pop",
         duration: "3:20",
-        cover: "images/blinding-lights.jpg",
+        cover: "assets/images/lights.jpeg",
         lyrics: "I said, ooh, I'm blinded by the lights..."
       },
       "3": {
@@ -85,7 +85,7 @@
         album: "Animals",
         genre: "Electrónica",
         duration: "5:03",
-        cover: "images/animals.jpg",
+        cover: "assets/images/animals.jpeg",
         lyrics: "The club is full of energy..."
       },
       "4": {
@@ -94,11 +94,47 @@
         album: "Time Out",
         genre: "Jazz",
         duration: "5:24",
-        cover: "images/take-five.jpg",
+        cover: "assets/images/five.jpeg",
         lyrics: "Instrumental..."
+      },
+      "9": {
+        title: "Stairway to Heaven",
+        artist: "Led Zeppelin",
+        album: "Untitled",
+        genre: "Rock",
+        duration: "8:02",
+        cover: "assets/images/heaven.jpeg",
+        lyrics: "There's a lady who's sure all that glitters is gold..."
+      },
+      "10": {
+        title: "Like a Prayer",
+        artist: "Madonna",
+        album: "Like a Prayer",
+        genre: "Pop",
+        duration: "5:42",
+        cover: "assets/images/prayer.jpg",
+        lyrics: "Life is a mystery, everyone must stand alone..."
+      },
+      "11": {
+        title: "One More Time",
+        artist: "Daft Punk",
+        album: "Discovery",
+        genre: "Electrónica",
+        duration: "5:20",
+        cover: "assets/images/more_time.jpg",
+        lyrics: "One more time, we're gonna celebrate..."
+      },
+      "12": {
+        title: "So What",
+        artist: "Pink",
+        album: "Kind of Blue",
+        genre: "Pop - Rock",
+        duration: "3:40",
+        cover: "assets/images/so_what.jpg",
+        lyrics: "So, so what? I'm still a rock star"
       }
-      // Agrega más canciones según se necesite
     };
+
 
     // Función para obtener parámetros de la URL
     function getQueryParam(param) {
