--- a/register.html
+++ b/register.html
@@ -16,7 +16,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+  <!-- Inyección del header -->
+  <div id="header-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
+      });
+  </script>
   <!-- CONTENIDO PRINCIPAL: Formulario de Registro -->
   <main class="content login-page">
     <!-- Título del formulario -->
