--- a/recover.html
+++ b/recover.html
@@ -8,7 +8,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+  <!-- Inyección del header -->
+  <div id="header-placeholder"></div>
+  <script>
+    fetch('header.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+        // Después de cargar el header, inicializamos el carrito
+        setTimeout(() => {
+          updateCartCount();
+          updateCartDropdown();
+        }, 100);
+      });
+  </script>
   <!-- Contenido principal: Recuperar contraseña -->
   <main class="content login-page">
     <h2>Recuperar Contraseña</h2>
