--- a/generos especifico.html
+++ b/generos especifico.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UnderSounds - Género</title>
+  
   <!-- Fuente moderna y redondeada -->
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+
   <style>
     .genre-header {
       text-align: center;
@@ -17,21 +19,64 @@
       margin: 20px auto;
       padding: 20px;
     }
+    .songs-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px; 
+      padding: 30px; 
+      max-width: 1200px; 
+      margin: 0 auto;
+    }
+    .card {
+      text-decoration: none;
+      color: inherit;
+      border: 2px solid #ddd;
+      border-radius: 12px;
+      overflow: hidden;
+      width: 400px; 
+      height: 140px; 
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+      background-color: #f8f9fa;
+      padding-bottom: 10px; 
+    }
+    .card:hover {
+      transform: scale(1.08);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    .card img {
+      width: 100%;
+      height: 160px; 
+      object-fit: cover;
+    }
+    .card-caption {
+      padding: 12px;
+      font-size: 18px; 
+      font-weight: bold;
+      color: #333; 
+    }
   </style>
 </head>
 <body>
   <!-- Inyección del header -->
   <div id="header-placeholder"></div>
+
   <script>
-    fetch('header.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('header-placeholder').innerHTML = data;
-        setTimeout(() => {
-          updateCartCount();
-          updateCartDropdown();
-        }, 100);
-      });
+    document.addEventListener("DOMContentLoaded", () => {
+      const headerPlaceholder = document.getElementById("header-placeholder");
+      if (headerPlaceholder) {
+        fetch('header.html')
+          .then(response => response.text())
+          .then(data => {
+            headerPlaceholder.innerHTML = data;
+            setTimeout(() => {
+              updateCartCount();
+              updateCartDropdown();
+            }, 100);
+          });
+      }
+    });
   </script>
 
   <!-- Contenido específico del género -->
@@ -43,6 +88,12 @@
     <p id="genre-description">Descripción del género.</p>
   </main>
 
+  <!-- Sección de canciones del género -->
+  <section>
+    <h2 style="text-align: center;">Canciones de este género</h2>
+    <div id="songs-container" class="songs-container"></div>
+  </section>
+
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 UnderSounds. Todos los derechos reservados.</p>
@@ -50,6 +101,8 @@
 
   <!-- Carga de scripts -->
   <script src="js/generos.js"></script>
+  <script src="js/canciones.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
+
