Retoques del buscador y pagina de ayuda

--- a/sellos.html
+++ b/sellos.html
@@ -153,6 +153,13 @@
       });
   </script>
 
+  <style>
+
+    #label-content {
+      flex: 1;
+    }
+  </style>
+
   <!-- Contenido principal: Sello Discográfico -->
   <div id="label-content">
     <h1 id="label-name" class="label-name"></h1>
@@ -161,9 +168,6 @@
     
     <h2 class="section-title">Álbumes recientes</h2>
     <div id="recent-albums" class="cards-container"></div>
-  
-    <h2 class="section-title">Artistas del sello</h2>
-    <div id="label-artists" class="cards-container"></div>
   </div>
   
 
