Cambios en el archivo ayuda.html

--- a/ayuda.html
+++ b/ayuda.html
@@ -140,7 +140,7 @@
     <section class="contact">
       <h3>Contáctanos</h3>
       <p>Si no encuentras la respuesta que buscas, completa el siguiente formulario y nos pondremos en contacto contigo.</p>
-      <form action="#" method="post">
+      <form onsubmit="event.preventDefault(); window.location.href='index.html';">
         <label for="name">Nombre:</label>
         <input type="text" id="name" name="name" placeholder="Tu nombre" required>
         
